[package]
name = "mine-dlp"
version = "0.5.0"
edition = "2021"

description = "A yt-dlp wrapper for downloading YouTube videos from command line"
license = "MIT"
repository = "https://github.com/Manicharan01/mine-dlp"

[lib]
name = "mine_dlp"
path = "src/lib.rs"

[[bin]]
name = "mine-dlp"
path = "src/main.rs"

[dependencies]
dirs = "5.0.1"
